MOD:添加logic异常类